# huggingface-template

./: .gitignore  environment.yml  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
