[project]
name = "my-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.8.0",
    "datasets>=4.4.2",
    "diffusers>=0.36.0",
    "ipywidgets>=8.1.8",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "peft>=0.18.0",
    "seaborn>=0.13.2",
    "toml>=0.10.2",
    "transformers[torch]>=5.0.0RC1",
    "tensorboard>=2.20.0",
    "torch-tb-profiler>=0.4.3",
]

[tool.uv.extra-build-dependencies]
flash-attn = [{ requirement = "torch", match-runtime = true }]
[tool.uv.extra-build-variables]
flash-attn = { MAX_JOBS = "4" }
